--- a/LyonTracks/style.css
+++ b/LyonTracks/style.css
@@ -72,6 +72,7 @@ a:hover {
 	padding: 0px 20px;
 }
 
+
 /* Banner */
 
 #banner {
@@ -98,9 +99,14 @@ a:hover {
 }
 
 #logo h1 {
-	padding: 60px 0px 0px 0px;
+	padding: 80px 0px 0px 0px;
 	letter-spacing: -2px;
 	font-size: 3.8em;
+	
+}
+#logo h1 img {
+	float:left;
+	margin: 20px 0px 0px 0px;
 }
 
 #logo p {
